--- a/研究内容.md
+++ b/研究内容.md
@@ -3,7 +3,7 @@ title: ""
 feature_text: |
 feature_image: "https://picsum.photos/2560/600?image=873"
 excerpt: ""
-aside: true
+aside: false
 ---
 ### 大学院
 岩礁潮間帯の固着生物群集を対象に，群集動態（特に種組成の時間変化）の空間変異性がどのようなプロセスによって生じているのかについて，群集行列モデルや離散ロトカ-ヴォルテラモデルを用いて解析し，学位を取得しました．
